k8s/services/redis-admin/k8s/deployment.yml
kind: Deployment 
apiVersion: apps/v1 
metadata:   
  namespace: redis
  name: redis-admin   
  labels:     
    app: redis-admin     
spec:   
  replicas: 1   
  selector:     
    matchLabels:       
      app: redis-admin   
  template:     
    metadata:       
      labels:         
        app: redis-admin         
    spec:       
      serviceAccountName: redis-admin
      containers:
        - name: redis-admin           
          image: duyle95/redis-admin:1.0.0
          imagePullPolicy: Always           
          ports:             
            - name: web               
              containerPort: 8081           
          resources:
            requests:
              cpu: 1
              memory: 1Gi
            limits:
              cpu: 4
              memory: 4Gi
